---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
error[ASYNC102]: ASYNC102.py:5:5: Async functions should not call synchronous `os` methods

  |
4 | async def foo():
5 |     os.popen()
  |     ^^^^^^^^
  |
error[ASYNC102]: ASYNC102.py:9:5: Async functions should not call synchronous `os` methods

  |
8 | async def foo():
9 |     os.spawnl()
  |     ^^^^^^^^^
  |
